--- a/4월 15일 실습 문제.ipynb
+++ b/4월 15일 실습 문제.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 251,
    "id": "10fdfda8",
    "metadata": {},
    "outputs": [
@@ -210,17 +210,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3  6  3  6]\n",
-      " [19  2 18 18]\n",
-      " [ 6 11  0  4]\n",
-      " [13  9  2  1]\n",
-      " [12 15  1 12]]\n",
+      "[[12 15  0  3]\n",
+      " [ 3  7  9 19]\n",
+      " [18  4  6 12]\n",
+      " [ 1  6  7 14]\n",
+      " [17  5 13  8]]\n",
       "\n",
-      " [[  3 100   3 100]\n",
-      " [100   2  18  18]\n",
-      " [100  11   0   4]\n",
-      " [100   9   2   1]\n",
-      " [ 12 100   1  12]]\n"
+      " [2 0 4 1]\n",
+      "4\n",
+      "[[ 12 100   0   3]\n",
+      " [  3   7   9 100]\n",
+      " [100   4   6  12]\n",
+      " [  1   6   7  14]\n",
+      " [ 17   5 100   8]]\n"
      ]
     }
    ],
@@ -228,11 +230,16 @@
     "# 문제 8.\n",
     "# 임의의 (5, 4) 배열을 생성한 뒤, 열 별로 가장 큰 값을 100으로 바꾸는 코드를 작성하시오.\n",
     "# (단, 같은 값이 여러 개일 경우 전부 바뀜)\n",
+    "np.random.seed(0)\n",
     "arr = np.random.randint(0,20, (5,4))\n",
     "print(arr)\n",
-    "for i in range (len(arr)):\n",
-    "    arr[arr == np.max(arr[i])] = 100\n",
-    "print(\"\\n\", arr)"
+    "\n",
+    "index = np.argmax(arr, axis=0)\n",
+    "print(\"\\n\", index)\n",
+    "print(len(index))\n",
+    "for i in range(len(arr)-1):\n",
+    "    np.put(arr[:,i], index[i], 100)\n",
+    "print(arr)"
    ]
   },
   {
